# mmm-eval

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  __init__.py  base_adapter.py  basic_usage.py  index.html  lightweight_mmm.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test_click_multiple.py  tox.ini
.github/workflows/: docs.yml
about/license/: index.html
adapters/: __init__.py  meridian.py
api/adapters/: index.html
api/cli/: index.html
api/core/: index.html
api/data/: index.html
api/metrics/: index.html
core/: __init__.py  base.py  results.py
data/: loaders.py
development/contributing/: index.html
development/setup/: index.html
development/testing/: index.html
docs/: index.md
docs/about/: changelog.md  license.md
docs/api/: adapters.md  cli.md  core.md  data.md  metrics.md
docs/development/: contributing.md  setup.md  testing.md
docs/examples/: basic-usage.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/user-guide/: cli.md  data-formats.md  data.md  frameworks.md  meridian-integration.md  metrics.md  tests.md  troubleshooting.md
examples/: basic_usage.py  data_pipeline_example.py  data_validation_example.py  meridian_eval.ipynb  meridian_example.py  pymc_eval.ipynb
examples/basic-usage/: index.html
examples/data/: example_data.csv  example_pymc_config.json  saved_config.json
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
metrics/: accuracy.py
mmm_eval/: __init__.py  _version.py  test_hydration.ipynb  utils.py
mmm_eval/adapters/: __init__.py  base.py  base_adapter.py  meridian.py  pymc.py  robyn.py  schemas.py
mmm_eval/adapters/experimental/: pymc.py  schemas.py  test_hydration.ipynb
mmm_eval/cli/: __init__.py  evaluate.py
mmm_eval/comparison/: constants.py  dataloader.py  dataset_processor.py  load.py  process.py  utils.py
mmm_eval/comparison/notebooks/: Comparison_Testing.ipynb
mmm_eval/comparison/scripts/: construct_datasets.py  run.py
mmm_eval/config/: config_models.py  constants.py  loaders.py
mmm_eval/configs/: __init__.py  base.py  config_registry.py  configs.py  constants.py  exceptions.py  rehydrators.py  utils.py
mmm_eval/core/: __init__.py  base_validation_test.py  constants.py  dataframe_constants.py  evaluator.py  exceptions.py  results.py  run_evaluation.py  validation_test_constants.py  validation_test_orchestrator.py  validation_test_results.py  validation_tests.py  validation_tests_models.py
mmm_eval/data/: __init__.py  constants.py  exceptions.py  input_dataframe_constants.py  loaders.py  pipeline.py  processor.py  schemas.py  synth_data_generator.py  validation.py
mmm_eval/data/sample_data/: README.md  meridian_geo_media.parquet
mmm_eval/metrics/: __init__.py  accuracy.py  accuracy_functions.py  exceptions.py  metric_models.py  refresh_stability.py  refresh_stability_functions.py  threshold_constants.py
mmm_eval/notebooks/: config_workflow.ipynb  logging_test.ipynb
mmm_eval/utils/: __init__.py  io.py  logging.py
scripts/: setup.sh
search/: search_index.json
src/mmm_eval/adapters/: meridian.py  pymc.py
tests/: conftest.py  test_accuracy_functions.py  test_base_validation_test.py  test_data_loader.py  test_data_pipeline.py  test_data_processor.py  test_data_validator.py  test_e2e.py  test_metric_models.py  test_utils.py  test_validation_test_results.py
tests/test_adapters/: test_meridian.py  test_pymc.py
tests/test_cli/: test_evaluate.py
tests/test_configs/: test_configs.py
tests/test_data/test_pymc/: test_config.json
tests/test_validation_tests/: test_perturbation.py  test_placebo.py  test_placebo_integration.py
user-guide/cli/: index.html
user-guide/data/: index.html
user-guide/data-formats/: index.html
user-guide/frameworks/: index.html
user-guide/metrics/: index.html
user-guide/tests/: index.html
user-guide/troubleshooting/: index.html
