[tool.poetry]
name = "mmm-eval"
version = "0.1.0"
description = "Media Mix Modeling Evaluation"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "mmm_eval"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^2.0.2"
pandas = "^2.0.0"
google-meridian = "^1.1.0"
pymc-marketing = "^0.14.0"
scipy = ">=1.13.1,<2.0.0"
pytensor = "^2.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
jupyter = "^1.0.0"

[project]
name = "mmm-eval"
version = "0.1.0"
description = "Media Mix Modeling Evaluation"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "google-meridian>=0.1.0",
    "pymc>=5.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "jupyter>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
