[tool.poetry]
name = "mmm-eval"
version = "0.1.0"
description = "Open-source evaluation of marketing mix model (MMM) performance"
authors = ["Joseph Kang <joseph.kang@mutinex.co>",
           "Phil Clark <phil.clark@mutinex.co>",
           "Sam McCormick <samuel.mccormick@mutinex.co>",
           "Benjamin Dobrin <ben.dobrin@mutinex.co>"]
readme = "README.md"
packages = [{include = "mmm_eval"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = ">=1.17",
pandas = "^2.0.0"
google-meridian = "^1.1.0"
pymc-marketing = "~0.14.0"
scipy = ">=1.13.1,<2.0.0"
pytensor = "^2.18.0"
pandera = "^0.18"
pydantic = "^2.5"
click = "^8.1.7"
numpyro = "~0.13.0"
jax = "~0.4.14"
jaxlib = "~0.4.14"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
jupyter = "^1.0.0"
tox = "^4.11.0"

[project]
name = "mmm-eval"
version = "0.1.0"
description = "Media Mix Modeling Evaluation"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=2.0.2",
    "pandas>=2.0.0",
    "google-meridian>=1.1.0",
    "pymc-marketing~=0.14.0",
    "scipy>=1.13.1,<2.0.0",
    "pytensor>=2.18.0",
    "numpyro~=0.13.0",
    "jax~=0.4.14",
    "jaxlib~=0.4.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "jupyter>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
